stretched ribbon and logo issue

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -44,7 +44,7 @@
   }
 
   .logo-box{
-    width: 80%;
+    width: 100px;
     height: 100px;
     display: grid;
     justify-self: center;
